tests/negative/misc/empty.orng
// error: no main function found
// 
